# Guardian-AA-A-Zero-Knowledge-AI-Wallet-Copilot

./: .cursorignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  research_report.md
.cursor/rules/: phase4rule.mdc  rustphase4.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  sdk-backlog.md  showcase.yml
.github/workflows/: ci.yml  community-engagement.yml  release.yml
backend/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SOLANA_INTEGRATION_EXAMPLE.md
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
backend/src/api/: mod.rs  routes.rs  websocket.rs
backend/src/api/handlers/: agent.rs  auth.rs  health.rs  mod.rs  transaction.rs  wallet.rs  zkml.rs
backend/src/api/middleware/: auth.rs  mod.rs
backend/src/auth/: mod.rs
backend/src/blockchain/: mod.rs  solana.rs
backend/src/db/: mod.rs  models.rs  queries.rs
backend/src/services/: agent.rs  auth.rs  mod.rs  transaction.rs  wallet.rs
backend/src/utils/: mod.rs
backend/src/zkml/: mod.rs
backend/tests/: auth_middleware_tests.rs  solana_integration_tests.rs  zkml_integration_tests.rs
contracts/: AGENTS.md  foundry.toml  hardhat.config.js  package.json  remappings.txt
contracts/cache/: solidity-files-cache.json
contracts/script/: Counter.s.sol
contracts/src/core/: BaseAccount.sol  BasePaymaster.sol  EntryPoint.sol  StakeManager.sol
contracts/src/interfaces/: IAccount.sol  ICrossChainAccount.sol  IEntryPoint.sol  IPaymaster.sol  IStakeManager.sol  UserOperation.sol
contracts/src/samples/: MultiSigAccount.sol  SimpleAccount.sol  SimpleAccountFactory.sol  VerifyingPaymaster.sol
contracts/src/tests/: EntryPoint.t.sol
docs/: AGENTS.md  ARCHITECTURE.md
mobile/: AGENTS.md
prover/: AGENTS.md  Cargo.toml  rust-toolchain.toml
prover/guardian_zkml/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  abi.json
prover/guardian_zkml/benches/: sha256_benchmark.rs
prover/guardian_zkml/src/: circuit.rs  lib.rs
prover/guardian_zkml/tests/: prover.rs
sdk/: .eslintrc.json  .prettierrc.json  AGENTS.md  CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/src/: index.ts
sdk/src/contracts/: account.ts  client.ts  entrypoint.ts  factory.ts  index.ts  paymaster.ts  types.ts
sdk/src/types/: index.ts
sdk/src/utils/: constants.ts  crypto.ts  formatting.ts  index.ts  validation.ts
sdk/src/zk/: client.ts  index.ts  prover.ts  types.ts  verifier.ts
sdk/tests/: index.test.ts  setup.ts  utils.test.ts
