[package]
name = "guardian_zkml"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
halo2_proofs = "0.3"
halo2_gadgets = { version = "0.3", features = ["unstable-sha256-gadget"] }
rand_core = { version = "0.6", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ezkl integration for advanced features (kept but not required for core functionality)
ezkl = { git = "https://github.com/zkonduit/ezkl.git", branch = "main", optional = true }
# Add essential dependencies for proof generation
rand = "0.8"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
hex-literal = "0.4"

[features]
default = []
ezkl-integration = ["ezkl"]

[[bench]]
name = "sha256_benchmark"
harness = false

[[bin]]
name = "generate-abi"
path = "src/bin/generate_abi.rs"
